syntax = "proto3";

package hexbroker;  // Use a valid package name

option go_package = "generated/hexbroker";  // Specify Go package path correctly

service HexBroker {  // Service name should be in camel case
    rpc AddRecord (AddRecordRequest) returns (AddRecordResponse);
    rpc DeleteRecord (DeleteRecordRequest) returns (DeleteRecordResponse);
    rpc RenameRecord (RenameRecordRequest) returns (RenameRecordResponse);
    rpc UpdateRecordValue (UpdateRecordRequest) returns (UpdateRecordResponse);
}

message AddRecordRequest {
    string region = 1;
    string record = 2;
}

message AddRecordResponse {
    repeated int32 vector_clock = 1;
}

message DeleteRecordRequest {
    string region = 1;
    string product = 2;
    int32 server_id = 3;
}

message DeleteRecordResponse {
    repeated int32 vector_clock = 1;
}

message RenameRecordRequest {
    string region = 1;
    string OldProduct = 2;
    string NewProduct = 3;
}

message RenameRecordResponse {
    repeated int32 vector_clock = 1;
}

message UpdateRecordRequest {
    string region = 1;
    string product = 2;
    double new_value = 3;
    int32 server_id = 4;
}

message UpdateRecordResponse {
    repeated int32 vector_clock = 1;
}
